# IR2117

./: .gitignore  tb3.rviz
HelloWord/: hello.cc
HelloWord/IR2117_Diego/tb3_ws/src/robot_trajectory/: CMakeLists.txt
MathProblem/: problem.cc
Quadratic/: quadratic  quadratic.cc
Sum/: sum.cc  sum_ab  sum_ab.cc
examen_2025/minmax/: CMakeLists.txt  package.xml
examen_2025/minmax/src/: max.cpp  min.cpp  minmax.cpp
ros2_ws/src/action_tutorials_cpp/: CMakeLists.txt
ros2_ws/src/action_tutorials_cpp/src/: action_client.cpp  action_server.cpp
ros2_ws/src/action_tutorials_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/cpp_srvcli/: package.xml
ros2_ws/src/cpp_srvcli/src/: add_two_ints_client.cpp  servicios.txt.txt
ros2_ws/src/examples/: CMakeLists.txt  package.xml
ros2_ws/src/examples/src/: subscriber.cpp
ros2_ws/src/learning_tf2_cpp/: CMakeLists.txt
ros2_ws/src/learning_tf2_cpp/launch/: .turtle_tf2_demo.launch.py.swp
ros2_ws/src/learning_tf2_cpp/src/: turtle_tf2_broadcaster.cpp  turtle_tf2_listener.cpp
ros2_ws/src/olympic/: CMakeLists.txt  package.xml
ros2_ws/src/olympic/src/: rings_action_client.cpp  rings_action_server.cpp
ros2_ws/src/olympic_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/olympic_interfaces/action/: Rings.action
ros2_ws/src/stats/: CMakeLists.txt  package.xml
ros2_ws/src/stats/src/: mean.cpp  median.cpp  mode.cpp.cpp
ros2_ws/src/sum/: CMakeLists.txt  package.xml
ros2_ws/src/sum/src/: sum.cpp
ros2_ws/urdf/: 01-myfirst.urdf
tb3_ws/install/: local_setup.sh  setup.sh
tb3_ws/install/robot_trajectory/lib/robot_trajectory/: publisher
tb3_ws/install/robot_trajectory/share/ament_index/resource_index/package_run_dependencies/: robot_trajectory
tb3_ws/install/robot_trajectory/share/ament_index/resource_index/parent_prefix_path/: robot_trajectory
tb3_ws/install/robot_trajectory/share/robot_trajectory/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
tb3_ws/install/robot_trajectory/share/robot_trajectory/cmake/: robot_trajectoryConfig-version.cmake  robot_trajectoryConfig.cmake
tb3_ws/install/robot_trajectory/share/robot_trajectory/environment/: ament_prefix_path.dsv  path.dsv
tb3_ws/log/: latest_build
tb3_ws/src/intrusion/: CMakeLists.txt  package.xml
tb3_ws/src/intrusion/launch/: monitor.launch.py
tb3_ws/src/intrusion/src/: monitor.cpp
tb3_ws/src/obstacles/: CMakeLists.txt  package.xml
tb3_ws/src/obstacles/launch/: triple_detector.launch.py
tb3_ws/src/obstacles/src/: avoidance.cpp  detector.cpp
tb3_ws/src/olympic/: CMakeLists.txt  package.xml
tb3_ws/src/olympic/src/: rings.cpp
tb3_ws/src/persons/: CMakeLists.txt  package.xml
tb3_ws/src/persons/launch/: person_follower.launch.py
tb3_ws/src/persons/src/: detector.cpp  follower.cpp
tb3_ws/src/robot_trajectory/: CMakeLists.txt
tb3_ws/src/robot_trajectory/launch/: polygon.launch.py  spiral.launch.py  square.launch.py
tb3_ws/src/robot_trajectory/src/: polygon.cpp  spiral.cpp  square.cpp  square_odom.cpp  wandering.cpp
urdf/: 01-myfirst.urdf  02-multipleshapes.urdf  03-origins.urdf  04-materials.urdf
