<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>olympic</name>
  <version>0.0.0</version>
  <description>Action server and client to draw Olympic rings in turtlesim</description>

  <maintainer email="ikergg1307@gmail.com">al435577</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>olympic_interfaces</build_depend>
  <build_depend>turtlesim</build_depend>  <!-- Añadido -->

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>olympic_interfaces</exec_depend>
  <exec_depend>turtlesim</exec_depend>  <!-- Añadido -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

